--- a/index.html
+++ b/index.html
@@ -20,41 +20,60 @@
     }
     .main-banner {
       width: 100vw;
-      max-width: 100vw;
-      height: auto;
-      max-height: none;
-      object-fit: contain;
+      max-width: 100%;
+      height: 210px;
+      max-height: 220px;
+      object-fit: cover;
+      margin-bottom: 10px;
       display: block;
-      margin: 0 auto 10px auto;
+    }
+    @media (max-width: 700px) {
+      .main-banner {
+        width: 100vw;
+        height: 33vw;
+        min-height: 130px;
+        max-height: none;
+        object-fit: cover;
+        border-radius: 0;
+        margin-bottom: 7px;
+      }
     }
     .student-login {
       display: flex;
       justify-content: center;
-      margin: 16px 0 24px;
+      margin: 24px 0 32px;
     }
     .student-login img {
       cursor: pointer;
-      height: 48px;
+      height: 55px;
       width: auto;
-      box-shadow: 0 2px 14px rgba(20,60,100,0.09);
-      border-radius: 8px;
+      box-shadow: 0 2px 14px rgba(20,60,100,0.11);
+      border-radius: 11px;
       transition: transform 0.12s;
-      padding: 6px 12px;
+      padding: 8px 24px;
       background: #f3f7ff;
     }
     .student-login img:hover {
-      transform: scale(1.09);
-      box-shadow: 0 4px 18px rgba(20,60,100,0.13);
+      transform: scale(1.11);
+      box-shadow: 0 4px 22px rgba(20,60,100,0.17);
       background: #e7f1ff;
+    }
+    @media (max-width: 700px) {
+      .student-login img {
+        height: 27px;
+        padding: 5px 12px;
+      }
     }
     .nav-bar {
       display: flex;
       justify-content: center;
-      gap: 25px;
+      align-items: center;
+      gap: 0;
       margin-bottom: 30px;
       font-weight: 600;
       letter-spacing: 1px;
       text-transform: uppercase;
+      flex-wrap: wrap;
     }
     .nav-bar a {
       color: #14307f;
@@ -63,9 +82,23 @@
       border-bottom: 2px solid transparent;
       padding-bottom: 5px;
       transition: border-color 0.2s;
+      margin: 0 8px;
+    }
+    .nav-bar .nav-sep {
+      color: #14307f;
+      font-weight: bold;
+      margin: 0 5px;
+      user-select: none;
     }
     .nav-bar a:hover {
       border-color: #314be7;
+    }
+    @media (max-width: 700px) {
+      .nav-bar {
+        flex-direction: row;
+        justify-content: center;
+        font-size: 0.98em;
+      }
     }
     .section-title {
       font-size: 1.25em;
@@ -98,14 +131,18 @@
       gap: 22px;
       margin: 35px 0 15px;
     }
-    .location-maps img {
+    .location-maps a img {
       border-radius: 10px;
       cursor: pointer;
       transition: transform 0.2s;
       max-width: 100%;
-      box-shadow: 0 1px 6px rgba(0,0,0,0.07);
+      width: 120px;
+      height: 120px;
+      object-fit: cover;
+      box-shadow: 0 2px 10px rgba(20,60,100,0.10);
+      background: #fff;
     }
-    .location-maps img:hover {
+    .location-maps a img:hover {
       transform: scale(1.05);
     }
     .academy-gallery {
@@ -115,21 +152,21 @@
       gap: 24px;
       margin-bottom: 38px;
     }
-    .academy-gallery img {
-      width: 180px;
-      height: 120px;
+    .academy-gallery a img {
+      width: 125px;
+      height: 125px;
       object-fit: cover;
       border-radius: 10px;
-      box-shadow: 0 1px 6px rgba(0,0,0,0.08);
-      cursor: pointer;
-      transition: transform 0.18s;
+      box-shadow: 0 1px 8px rgba(0,0,0,0.10);
       background: #fff;
+      transition: transform 0.16s;
+      cursor: pointer;
     }
-    .academy-gallery img:hover {
-      transform: scale(1.08);
+    .academy-gallery a img:hover {
+      transform: scale(1.09);
     }
-    .awards-title {
-      font-size: 1.3em;
+    .awards-title, .section-title {
+      font-size: 1.25em;
       color: #14307f;
       font-weight: 700;
       margin: 44px 0 14px 0;
@@ -143,18 +180,19 @@
       gap: 18px;
       margin-bottom: 40px;
     }
-    .awards-row img {
-      width: 95px;
-      height: auto;
-      border-radius: 8px;
+    .awards-row a img {
+      width: 125px;
+      height: 125px;
+      object-fit: cover;
+      border-radius: 10px;
       box-shadow: 0 2px 12px rgba(0,0,0,0.08);
       background: #fff;
       margin: 8px 0;
       cursor: pointer;
-      transition: transform 0.16s;
+      transition: transform 0.12s;
     }
-    .awards-row img:hover {
-      transform: scale(1.10);
+    .awards-row a img:hover {
+      transform: scale(1.09);
     }
     .lineage-header {
       text-align: center;
@@ -169,7 +207,6 @@
       max-width: 100%;
       border-radius: 10px;
       box-shadow: 0 1px 8px rgba(0,0,0,0.1);
-      cursor: pointer;
     }
     .lineage-photos {
       display: flex;
@@ -179,14 +216,12 @@
       margin-bottom: 40px;
     }
     .lineage-photos img {
-      width: 105px;
+      width: 125px;
+      height: 125px;
       border-radius: 10px;
       box-shadow: 0 1px 6px rgba(0,0,0,0.1);
-      cursor: pointer;
-      transition: transform 0.14s;
-    }
-    .lineage-photos img:hover {
-      transform: scale(1.10);
+      object-fit: cover;
+      background: #fff;
     }
     .instructors-section {
       background: #fafcff;
@@ -251,7 +286,6 @@
     .read-more-btn:hover {
       color: #314be7;
     }
-    /* Code of Conduct & FAQ */
     .conduct-section, .faqs-section {
       margin: 40px auto 35px auto;
       max-width: 900px;
@@ -281,8 +315,9 @@
       margin-bottom: 12px;
     }
     .content-collapsible.open {
-      max-height: 4000px;
+      max-height: 2000px;
       padding-bottom: 15px;
+      overflow: auto;
     }
     .read-more-section-btn {
       display: block;
@@ -313,7 +348,6 @@
       margin-left: 10px;
       color: #262626;
     }
-    /* Try a Free Class */
     .try-free-class {
       max-width: 430px;
       margin: 50px auto 70px;
@@ -411,42 +445,23 @@
       }
     }
     @media (max-width: 700px) {
+      .academy-gallery a img,
+      .lineage-photos img,
+      .awards-row a img {
+        width: 65px;
+        height: 65px;
+      }
       .main-banner {
-        width: 100vw;
-        max-width: 100vw;
-        height: auto;
-        max-height: none;
-      }
-      .nav-bar {
-        flex-direction: column;
-        gap: 12px;
-        align-items: center;
-      }
-      .student-login img {
-        height: 32px;
-        padding: 2px 8px;
-      }
-      .academy-gallery img {
-        width: 85px;
-        height: 60px;
-      }
-      .awards-row img {
-        width: 48px;
-      }
-      .lineage-photos img {
-        width: 54px;
-      }
-      .lineage-main-image img {
-        max-width: 98vw;
+        min-height: 120px;
+        height: 22vw;
       }
     }
     @media (max-width: 550px) {
       .container {
         padding: 0 5px;
       }
-      .main-banner {
-        width: 100vw;
-        height: auto;
+      .footer-logos-row img {
+        max-height: 54px;
       }
     }
   </style>
@@ -466,7 +481,9 @@
     <!-- Navigation Bar -->
     <nav class="nav-bar">
       <a href="#conduct">Code of Conduct</a>
+      <span class="nav-sep">|</span>
       <a href="#faqs">FAQ's</a>
+      <span class="nav-sep">|</span>
       <a href="#try-free-class">Try a Free Class</a>
     </nav>
 
@@ -484,8 +501,12 @@
       <div class="address-text">3635 S Lawrence St, STE G, Tacoma, WA 98409</div>
       <div class="location-text">We are located right next door to Flags A' Flyin on S 38th & Lawrence</div>
       <div class="location-maps">
-        <img src="cedar_plaza_location.jpg" alt="Tacoma Cedar Plaza Map" class="popup-img" />
-        <img src="cedar_plaza_building_d.jpg" alt="Cedar Plaza Building D" class="popup-img" />
+        <a href="cedar_plaza_location.jpg" onclick="openModal(event, 'cedar_plaza_location.jpg')" title="Open Cedar Plaza Map">
+          <img src="cedar_plaza_location.jpg" alt="Tacoma Cedar Plaza Map" />
+        </a>
+        <a href="cedar_plaza_building_d.jpg" onclick="openModal(event, 'cedar_plaza_building_d.jpg')" title="Open Cedar Plaza Building D">
+          <img src="cedar_plaza_building_d.jpg" alt="Cedar Plaza Building D" />
+        </a>
       </div>
       <div class="location-map-link">
         <a href="https://maps.app.goo.gl/debgQ8w2XD5YwNJ9A" target="_blank" rel="noopener noreferrer">Open live directions map</a>
@@ -494,89 +515,86 @@
 
     <!-- Academy Gallery -->
     <section id="gallery" class="gallery-section">
-      <div class="gallery-title" style="text-align:center;">Academy Gallery</div>
+      <div class="section-title">Academy Gallery</div>
       <div class="academy-gallery">
-        <img src="img_5426.jpeg" alt="Mat Space" class="popup-img" />
-        <img src="img_5427.jpeg" alt="Mat View" class="popup-img" />
-        <img src="img_5425.jpeg" alt="Bag Area" class="popup-img" />
+        <a href="img_5426.jpeg" onclick="openModal(event, 'img_5426.jpeg')" title="Click to enlarge">
+          <img src="img_5426.jpeg" alt="Mat Space" />
+        </a>
+        <a href="img_5427.jpeg" onclick="openModal(event, 'img_5427.jpeg')" title="Click to enlarge">
+          <img src="img_5427.jpeg" alt="Mat View" />
+        </a>
+        <a href="img_5425.jpeg" onclick="openModal(event, 'img_5425.jpeg')" title="Click to enlarge">
+          <img src="img_5425.jpeg" alt="Bag Area" />
+        </a>
       </div>
     </section>
 
     <!-- Academy Awards -->
     <div class="awards-title">Academy Awards</div>
     <div class="awards-row">
-      <img src="best_of_tacoma_2012.jpg" alt="Best of Tacoma 2012" class="popup-img" />
-      <img src="best_of_tacoma_2013.jpg" alt="Best of Tacoma 2013" class="popup-img" />
-      <img src="best_of_tacoma_2014.jpg" alt="Best of Tacoma 2014" class="popup-img" />
-      <img src="best_of_tacoma_2015.jpg" alt="Best of Tacoma 2015" class="popup-img" />
-      <img src="best_of_tacoma_2016.jpg" alt="Best of Tacoma 2016" class="popup-img" />
-      <img src="best_of_tacoma_2017.jpg" alt="Best of Tacoma 2017" class="popup-img" />
-      <img src="best_of_tacoma_2018.jpg" alt="Best of Tacoma 2018" class="popup-img" />
-      <img src="best_of_tacoma_2019.jpg" alt="Best of Tacoma 2019" class="popup-img" />
-      <img src="best_of_tacoma_2020_excellence_award.jpg" alt="Best of Tacoma 2020 Excellence Award" class="popup-img" />
-      <img src="best_of_tacoma_2022.jpg" alt="Best of Tacoma 2022" class="popup-img" />
-      <img src="best_of_tacoma_2023.jpg" alt="Best of Tacoma 2023" class="popup-img" />
+      <a href="best_of_tacoma_2012.jpg" onclick="openModal(event, 'best_of_tacoma_2012.jpg')"><img src="best_of_tacoma_2012.jpg" alt="Best of Tacoma 2012" /></a>
+      <a href="best_of_tacoma_2013.jpg" onclick="openModal(event, 'best_of_tacoma_2013.jpg')"><img src="best_of_tacoma_2013.jpg" alt="Best of Tacoma 2013" /></a>
+      <a href="best_of_tacoma_2014.jpg" onclick="openModal(event, 'best_of_tacoma_2014.jpg')"><img src="best_of_tacoma_2014.jpg" alt="Best of Tacoma 2014" /></a>
+      <a href="best_of_tacoma_2015.jpg" onclick="openModal(event, 'best_of_tacoma_2015.jpg')"><img src="best_of_tacoma_2015.jpg" alt="Best of Tacoma 2015" /></a>
+      <a href="best_of_tacoma_2016.jpg" onclick="openModal(event, 'best_of_tacoma_2016.jpg')"><img src="best_of_tacoma_2016.jpg" alt="Best of Tacoma 2016" /></a>
+      <a href="best_of_tacoma_2017.jpg" onclick="openModal(event, 'best_of_tacoma_2017.jpg')"><img src="best_of_tacoma_2017.jpg" alt="Best of Tacoma 2017" /></a>
+      <a href="best_of_tacoma_2018.jpg" onclick="openModal(event, 'best_of_tacoma_2018.jpg')"><img src="best_of_tacoma_2018.jpg" alt="Best of Tacoma 2018" /></a>
+      <a href="best_of_tacoma_2019.jpg" onclick="openModal(event, 'best_of_tacoma_2019.jpg')"><img src="best_of_tacoma_2019.jpg" alt="Best of Tacoma 2019" /></a>
+      <a href="best_of_tacoma_2020_excellence_award.jpg" onclick="openModal(event, 'best_of_tacoma_2020_excellence_award.jpg')"><img src="best_of_tacoma_2020_excellence_award.jpg" alt="Best of Tacoma 2020 Excellence Award" /></a>
+      <a href="best_of_tacoma_2022.jpg" onclick="openModal(event, 'best_of_tacoma_2022.jpg')"><img src="best_of_tacoma_2022.jpg" alt="Best of Tacoma 2022" /></a>
+      <a href="best_of_tacoma_2023.jpg" onclick="openModal(event, 'best_of_tacoma_2023.jpg')"><img src="best_of_tacoma_2023.jpg" alt="Best of Tacoma 2023" /></a>
     </div>
 
     <!-- Academy Lineage -->
     <h2 class="lineage-header">Academy Lineage</h2>
     <div class="lineage-main-image">
-      <img src="lineage.jpg" alt="Academy Lineage" class="popup-img" />
+      <img src="lineage.jpg" alt="Academy Lineage" />
     </div>
     <div class="lineage-photos">
-      <img src="mitsuyo_maeda.jpeg" alt="Mitsuyo Maeda" class="popup-img" />
-      <img src="carlos_gracie_sr.jpeg" alt="Carlos Gracie Sr." class="popup-img" />
-      <img src="carlson_gracie_sr.jpeg" alt="Carlson Gracie Sr." class="popup-img" />
-      <img src="ricardo_de_la_riva.jpeg" alt="Ricardo de la Riva" class="popup-img" />
-      <img src="marcello_c_montiero.jpeg" alt="Marcello C Monteiro" class="popup-img" />
-      <img src="michael_proctor_sr.png" alt="Michael Proctor" class="popup-img" />
+      <img src="mitsuyo_maeda.jpeg" alt="Mitsuyo Maeda" />
+      <img src="carlos_gracie_sr.jpeg" alt="Carlos Gracie Sr." />
+      <img src="carlson_gracie_sr.jpeg" alt="Carlson Gracie Sr." />
+      <img src="ricardo_de_la_riva.jpeg" alt="Ricardo de la Riva" />
+      <img src="marcello_c_montiero.jpeg" alt="Marcello C Monteiro" />
+      <img src="michael_proctor_sr.png" alt="Michael Proctor" />
     </div>
 
-    <!-- Instructors Section (unchanged, omitted for brevity) -->
-    <!-- ... -->
+    <!-- Instructors Section -->
+    <!-- ...(unchanged instructor cards and content below) -->
+    <!-- Code of Conduct, FAQ, Free Class, Footer sections here ... unchanged ... -->
 
-    <!-- Code of Conduct, FAQ, Try a Free Class (unchanged, omitted for brevity) -->
+    <!-- (Insert your unchanged Code of Conduct, FAQ, Try a Free Class, and Footer sections here) -->
 
   </div>
 
-  <footer>
-    <div class="footer-logos-row">
-      <img src="sanitized_facility.jpg" alt="Sanitized Facility" class="sanitized" />
-      <img src="military_discounts.gif" alt="Military Discounts" class="military" />
-      <img src="no_bullies.jpg" alt="No Bullies" class="bullies" />
-    </div>
-    <div class="social-links">
-      <a href="https://www.instagram.com/gritcitybjj" target="_blank" title="Instagram" rel="noopener noreferrer">
-        <img src="instagram.png" alt="Instagram" />
-      </a>
-      <a href="https://x.com/gritcitybjj" target="_blank" title="𝕏" rel="noopener noreferrer">
-        <img src="𝕏.png" alt="𝕏" style="background:#000;" />
-      </a>
-      <a href="https://www.facebook.com/gritcitybjj" target="_blank" title="Facebook" rel="noopener noreferrer">
-        <img src="facebook.png" alt="Facebook" />
-      </a>
-    </div>
-    <div class="footer-bottom">&copy; 2025 GRIT CITY BJJ | All Rights Reserved</div>
-  </footer>
-
-  <!-- LIGHTBOX POPUP SCRIPT (pure JS) -->
-  <div id="lightbox-modal" style="display:none;position:fixed;z-index:99999;top:0;left:0;width:100vw;height:100vh;background:rgba(18,18,18,0.87);align-items:center;justify-content:center;">
-    <img id="lightbox-img" src="" alt="" style="max-width:98vw;max-height:90vh;border-radius:10px;box-shadow:0 2px 24px #000b;">
+  <!-- Modal for all image pop-ups -->
+  <div id="img-modal" style="display:none;position:fixed;z-index:9999;top:0;left:0;width:100vw;height:100vh;background:rgba(20,30,40,0.91);align-items:center;justify-content:center;">
+    <img id="modal-img" src="" alt="Popup" style="max-width:96vw;max-height:90vh;border-radius:12px;box-shadow:0 3px 32px #000b;">
+    <span onclick="closeModal()" style="position:absolute;top:20px;right:40px;font-size:3rem;color:#fff;cursor:pointer;font-family:sans-serif;font-weight:700;line-height:1;">&times;</span>
   </div>
+
   <script>
-    // Pop-up image modal
-    document.querySelectorAll('.popup-img').forEach(img => {
-      img.addEventListener('click', function() {
-        document.getElementById('lightbox-img').src = this.src;
-        document.getElementById('lightbox-modal').style.display = 'flex';
-      });
+    // Image pop-up modal
+    function openModal(event, src) {
+      event.preventDefault();
+      var modal = document.getElementById('img-modal');
+      var img = document.getElementById('modal-img');
+      img.src = src;
+      modal.style.display = 'flex';
+      document.body.style.overflow = 'hidden';
+    }
+    function closeModal() {
+      var modal = document.getElementById('img-modal');
+      modal.style.display = 'none';
+      document.getElementById('modal-img').src = '';
+      document.body.style.overflow = '';
+    }
+    window.addEventListener('keydown', function(e) {
+      if (e.key === 'Escape') closeModal();
     });
-    document.getElementById('lightbox-modal').addEventListener('click', function(e) {
-      if (e.target === this) {
-        this.style.display = 'none';
-        document.getElementById('lightbox-img').src = '';
-      }
-    });
+    document.getElementById('img-modal').onclick = function(e) {
+      if (e.target.id === 'img-modal') closeModal();
+    };
 
     // Instructor Bio toggle
     function toggleBio(button) {
