--- a/testindex.html
+++ b/testindex.html
@@ -6,6 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <style>
+/* RESET ALL LINE SPACING TO REMOVE HEADER → TEAM GAP */
+* { line-height:0 !important; }
+
 /* --------------------------------------------------------------
    BASE
 -------------------------------------------------------------- */
@@ -26,41 +29,37 @@ h2 {
   font-size: 2rem;
   font-weight: 800;
   margin-bottom: 22px;
+  line-height:1.3 !important;
 }
 
 /* --------------------------------------------------------------
-   IMAGE BANNERS
+   HEADER (NO SPACE BELOW)
 -------------------------------------------------------------- */
-.banner-img {
+.banner-img.header {
   width:100%;
   height:auto;
   display:block;
-  margin:25px 0;
-  border-radius:14px;
-  box-shadow:0 5px 24px rgba(0,0,0,0.55);
-}
-
-/* REMOVE ALL SPACE UNDER HEADER */
-.banner-img.header {
   margin:0;
   padding:0;
 }
 
 /* --------------------------------------------------------------
-   HERO — team.png (tight)
+   HERO — team.png (NO GAP ABOVE)
 -------------------------------------------------------------- */
 .hero {
-  width: 100%;
-  height: 45vh;
-  min-height: 360px;
-  background: #000 url('team.png') center center no-repeat;
-  background-size: contain;
-  background-color: #000;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  padding-bottom: 25px;
-  margin: 0; /* ← NO SPACE BETWEEN HEADER & TEAM */
+  width:100%;
+  height:45vh;
+  min-height:360px;
+  background:#000 url('team.png') center center no-repeat;
+  background-size:contain;
+  margin:0;
+  padding:0;
+  padding-bottom:25px;
+  display:flex;
+  justify-content:center;
+  align-items:flex-end;
+  position:relative;
+  line-height:1.3 !important;
 }
 .hero::after {
   content:"";
@@ -74,15 +73,11 @@ h2 {
   z-index:10;
   margin-bottom: 6px;
 }
-.hero-title {
-  font-size: 2.4rem;
-  font-weight: 900;
-  margin-bottom: 4px;
-}
 .hero-sub {
-  font-size: 1rem;
+  font-size:1rem;
   opacity:.9;
-  margin-bottom: 18px;
+  margin-bottom:18px;
+  line-height:1.2 !important;
 }
 .hero-btns {
   display:flex;
@@ -96,6 +91,7 @@ h2 {
   color:#fff;
   font-weight:800;
   text-decoration:none;
+  line-height:1 !important;
 }
 .btn-blue-outline {
   background:transparent;
@@ -105,6 +101,7 @@ h2 {
   border:2px solid #3B82F6;
   font-weight:800;
   text-decoration:none;
+  line-height:1 !important;
 }
 
 /* --------------------------------------------------------------
@@ -132,13 +129,14 @@ h2 {
   font-size:.85rem;
   padding-bottom:4px;
   border-bottom:2px solid transparent;
+  line-height:1.2 !important;
 }
 .nav-inner a:hover {
   border-color:#3B82F6;
 }
 
 /* --------------------------------------------------------------
-   PROGRAMS
+   PROGRAMS — ALL UNIFORM COLOR
 -------------------------------------------------------------- */
 .program-grid {
   display:grid;
@@ -146,12 +144,14 @@ h2 {
   gap:16px;
 }
 .program-box {
-  background:#111827;
+  background:#1E2533;        /* FIXED uniform color */
   padding:22px;
   border-radius:14px;
   text-align:center;
   font-weight:800;
-  border:1px solid #1F2937;
+  border:1px solid #2C3445;
+  color:#E5E7EB;
+  line-height:1.3 !important;
 }
 
 /* --------------------------------------------------------------
@@ -179,6 +179,7 @@ h2 {
   border-radius:14px;
   border:1px solid #1F2937;
   text-align:center;
+  line-height:1.3 !important;
 }
 .location-thumbs {
   display:flex;
@@ -251,7 +252,7 @@ h2 {
 }
 
 /* --------------------------------------------------------------
-   BLUE ACCORDIONS
+   ACCORDIONS
 -------------------------------------------------------------- */
 .accordion-btn {
   width:100%;
@@ -265,6 +266,7 @@ h2 {
   text-align:left;
   letter-spacing:1px;
   box-shadow:0 0 10px rgba(59,130,246,0.4);
+  line-height:1.2 !important;
 }
 .accordion-btn:hover {
   background:#1E293B;
@@ -277,6 +279,7 @@ h2 {
   padding:18px;
   border-radius:12px;
   border:1px solid #1F2937;
+  line-height:1.3 !important;
 }
 
 /* --------------------------------------------------------------
@@ -289,6 +292,7 @@ form input, form textarea {
   padding:12px;
   border-radius:10px;
   color:white;
+  line-height:1.3 !important;
 }
 form button {
   width:100%;
@@ -299,13 +303,14 @@ form button {
   color:white;
   font-weight:800;
   margin-top:8px;
+  line-height:1 !important;
 }
 form button:hover {
   background:#60A5FA;
 }
 
 /* --------------------------------------------------------------
-   FOOTER
+   FOOTER — EACH IMAGE ON ITS OWN LINE
 -------------------------------------------------------------- */
 footer {
   padding:30px 18px;
@@ -314,26 +319,14 @@ footer {
   margin-top:30px;
 }
 
-/* NEW FOOTER LAYOUT REQUESTED */
-.footer-two {
+/* EACH FOOTER IMAGE CENTERED ALONE */
+.footer-row {
   display:flex;
   justify-content:center;
-  gap:22px;
-  flex-wrap:wrap;
-  margin-bottom:16px;
+  margin-bottom:20px;
 }
-.footer-two img {
-  width:120px;
-  border-radius:12px;
-  background:#111;
-  padding:8px;
-}
-.footer-one {
-  display:flex;
-  justify-content:center;
-}
-.footer-one img {
-  width:140px;
+.footer-row img {
+  width:160px;
   border-radius:12px;
   background:#111;
   padding:8px;
@@ -358,13 +351,14 @@ footer {
 </head>
 <body>
 
-<!-- header.png (NO SPACE BELOW) -->
-<img src="header.png" class="banner-img header" />
+<!-- NO SPACE ABOVE OR BELOW -->
+<img src="header.png" class="banner-img header">
 
-<!-- HERO — team.png -->
+<!-- HERO (team.png) -->
 <div class="hero">
   <div class="hero-content">
-    <div class="hero-title">GRIT CITY BJJ</div>
+
+    <!-- ONLY KEEP THIS LINE -->
     <div class="hero-sub">BJJ COACH International Association in Tacoma, WA</div>
 
     <div class="hero-btns">
@@ -374,7 +368,7 @@ footer {
   </div>
 </div>
 
-<!-- NAVIGATION -->
+<!-- NAV BAR -->
 <div class="navbar">
   <div class="nav-inner">
     <a href="#conduct">Conduct</a>
@@ -410,7 +404,7 @@ footer {
   <p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
   <p>Next door to Flags A' Flyin on S 38th & Lawrence</p>
 
-  <a href="https://maps.app.goo.gl/debgQ8w2XD5YwNJ9A" style="color:#3B82F6;font-weight:800;">Open live directions map</a>
+  <a href="https://maps.app.goo.gl/debgQ8w2XD5YwNJ9A" style="color:#3B82F6;font-weight:800;line-height:1.2 !important;">Open live directions map</a>
 
   <div class="location-thumbs">
     <img src="cedar_plaza_location.jpg" onclick="pop(this)">
@@ -420,10 +414,10 @@ footer {
 </section>
 
 <!-- tacoma.png -->
-<img src="tacoma.png" class="banner-img" />
+<img src="tacoma.png" class="banner-img">
 
-<!-- face-off.png BELOW tacoma.png -->
-<img src="face-off.png" class="banner-img" />
+<!-- face-off.png -->
+<img src="face-off.png" class="banner-img">
 
 <!-- GALLERY -->
 <section>
@@ -559,47 +553,20 @@ footer {
 <button class="accordion-btn" onclick="toggleAcc(this)">Expand FAQ's</button>
 <div class="accordion-content">
 
-<p><strong>1. What can BJJ and your school do for me?</strong><br>
-BJJ helps fitness, confidence, discipline, stress relief, and community.</p>
-
-<p><strong>2. Do I need to be in shape?</strong><br>
-We welcome all fitness levels.</p>
-
-<p><strong>3. Am I too old?</strong><br>
-No — all ages train.</p>
-
-<p><strong>4. Will I be expected to compete?</strong><br>
-Competition is optional.</p>
-
-<p><strong>5. Prior experience needed?</strong><br>
-No.</p>
-
-<p><strong>6. Beginner classes?</strong><br>
-Yes — structured basics.</p>
-
-<p><strong>7. Striking?</strong><br>
-Yes — MMA, Muay Thai, Boxing.</p>
-
-<p><strong>8. Weight loss?</strong><br>
-Very effective.</p>
-
-<p><strong>9. Class structure?</strong><br>
-Warmup → Technique → Rolling.</p>
-
-<p><strong>10. Family discounts?</strong><br>
-Yes.</p>
-
-<p><strong>11. Membership cost?</strong><br>
-Varies based on goals.</p>
-
-<p><strong>12. Kids classes?</strong><br>
-Age 5+.</p>
-
-<p><strong>13. Time to Black Belt?</strong><br>
-Depends on dedication.</p>
-
-<p><strong>14. How to start?</strong><br>
-Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.</p>
+<p><strong>1. What can BJJ and your school do for me?</strong><br>BJJ helps fitness, confidence, discipline, stress relief, and community.</p>
+<p><strong>2. Do I need to be in shape?</strong><br>We welcome all fitness levels.</p>
+<p><strong>3. Am I too old?</strong><br>No — all ages train.</p>
+<p><strong>4. Will I be expected to compete?</strong><br>Competition is optional.</p>
+<p><strong>5. Prior experience needed?</strong><br>No.</p>
+<p><strong>6. Beginner classes?</strong><br>Yes — structured basics.</p>
+<p><strong>7. Striking?</strong><br>MMA, Muay Thai, Boxing.</p>
+<p><strong>8. Weight loss?</strong><br>Very effective.</p>
+<p><strong>9. Class structure?</strong><br>Warmup → Technique → Rolling.</p>
+<p><strong>10. Family discounts?</strong><br>Yes.</p>
+<p><strong>11. Membership cost?</strong><br>Varies based on goals.</p>
+<p><strong>12. Kids classes?</strong><br>Age 5+.</p>
+<p><strong>13. Time to Black Belt?</strong><br>Depends on dedication.</p>
+<p><strong>14. How to start?</strong><br>Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.</p>
 
 </div>
 </section>
@@ -615,7 +582,7 @@ Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.</p>
   <button>Submit</button>
 </form>
 
-<!-- INTRODUCTORY IMAGE DIRECTLY BELOW FORM -->
+<!-- INTRO IMAGE -->
 <img src="introductory_class.jpg" style="width:100%;margin-top:20px;border-radius:14px;display:block;">
 </section>
 
@@ -635,21 +602,22 @@ function toggleAcc(btn){
 }
 </script>
 
-<!-- FOOTER -->
+<!-- FOOTER — EACH IMAGE ON ITS OWN LINE -->
 <footer>
 
-<!-- TOP ROW — military + no bullies (side by side) -->
-<div class="footer-two">
+<div class="footer-row">
   <img src="military_discounts.gif">
+</div>
+
+<div class="footer-row">
   <img src="no_bullies.jpg">
 </div>
 
-<!-- SECOND ROW — sanitized below them centered -->
-<div class="footer-one">
+<div class="footer-row">
   <img src="sanitized_facility.jpg">
 </div>
 
-<p>&copy; 2025 GRIT CITY BJJ — All Rights Reserved</p>
+<p style="line-height:1.3 !important;">&copy; 2025 GRIT CITY BJJ — All Rights Reserved</p>
 </footer>
 
 </body>
